Revert "fix: Replace filenamify by a custom slugify"
This reverts commit b55e2f6740476948d568e061ebcc222baeda9a36.
